samples/_failures_safe/1761461498_27fd90_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f925fded.c: In function ‘main’:
./samples/SAFE/__tmp_f925fded.c:180:13: error: expected expression at end of input
  180 |             case
      |             ^~~~
./samples/SAFE/__tmp_f925fded.c:180:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f925fded.c:180:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f925fded.c:180:13: error: expected declaration or statement at end of input
